Bug 71927 - toytk: titlebar titles and hotspots aren't updated after maximize until pointer move
Summary: toytk: titlebar titles and hotspots aren't updated after maximize until point...
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-22 18:20 UTC by U. Artie Eoff
Modified: 2014-05-08 22:52 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description U. Artie Eoff 2013-11-22 18:20:30 UTC
With Weston's toytoolkit client apps, after you maximize a window using the titlebar maximize/restore button and then click again without moving the pointer, the app responds like the titlebar is still at the restored/original geometry.  Similarly, when you maximize a window the title in the titlebar is not updated until the pointer is moved.

1. Launch weston-terminal
2. Click the "maximize/restore" titlebar button
3. Without moving the pointer, click again in the same spot
* Observe the window restores itself which is unexpected
4. Click the "maximize/restore" titlebar button without moving the pointer again
* Observe the title in the titlebar is the same as during restored state
5. Move the pointer
* Observe the title in the titlebar updates to the new title (of course, only noticeable on apps that change title in response to max/restore states... i.e. weston-terminal)

Observed in Weston 1.3.1 and Weston heads/master-0-g41c2554
Comment 1 Kristian Høgsberg 2014-04-07 17:56:14 UTC
Fixed in master:

commit db1fccb3d8951bf788b308a9e93f282af96d4a01
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Wed Feb 5 17:14:42 2014 -0800

    input: Send leave and enter pair when the surface moves under the cursor
    
    The client needs to know that the pointer is at a different position in
    its surface.  We can't send motion as that corresponds to the pointer
    actually moving.  Leaving the surface and entering at the new position
    is a better semantic match and doesn't correspond to pointer motion
    or user input.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=71927


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.